--- a/html/testimonios.html
+++ b/html/testimonios.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brest viajes</title>
+    <!--B CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
+
 <body>
-    <header>
-        <a href="../index.html">
-            <img class="Logo" src="../img/Leonardo_Diffusion_I_want_a_logo_for_my_website_called_brest_v_0.jpg" alt="Logo  Brest viajes" >
-        </a>
 
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home </a></li>
-                <li><a href="destinos.html">Destinos </a></li>
-                <li><a href="testimonios.html">Testimonios </a></li>
-                <li><a href="contacto.html">Contacto </a></li>
-            </ul>
-        </nav>
+    <nav class="navbar navbar-expand-lg encabezado">
+        <div class="container-fluid">
+            <a href="../index.html"> <img class="Logo"
+                    src="../img/Leonardo_Diffusion_I_want_a_logo_for_my_website_called_brest_v_0.jpg"
+                    alt="Logo  Brest viajes"> </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li><a href="/index.html">Home </a></li>
+                    <li><a href="/html/destinos.html">Destinos </a></li>
+                    <li><a href="/html/testimonios.html">Testimonios </a></li>
+                    <li><a href="/html/contacto.html">Contacto </a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    </header>
+
 
     <main>
         <h1>
@@ -29,30 +41,35 @@
         </h1>
         <h2>
             Testimonios de roma
+            <div class="jose">
         </h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Nai-Ipc77X0" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Nai-Ipc77X0" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
          picture-in-picture; web-share" allowfullscreen></iframe>
 
-         <h2>
+        <h2>
             Testimonios de Buenos Aires
         </h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/7a7yrRzt6YU" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7a7yrRzt6YU" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
          gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-         <h2>
-            Testimonios de  Barcelona
-         </h2>
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/8KkaXj68GEs" 
-         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+        <h2>
+            Testimonios de Barcelona
+        </h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8KkaXj68GEs" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
           gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-     
+        </div>
     </main>
 
     <footer>
         <h3>Brest viajes - Los derechos son reservados</h3>
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
